--- a/calendar noel/MainWindow.xaml
+++ b/calendar noel/MainWindow.xaml
@@ -1,11 +1,19 @@
 ﻿<Window x:Class="calendar_noel.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:calendar_noel"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Calendrier de Noël"
+        Height="450" Width="800"
+        WindowStartupLocation="CenterScreen"
+        Background="#FFF8F0">
+
+    <Window.Resources>
+        <!-- Déplacez la ressource dropShadow ici pour qu'elle soit accessible globalement -->
+        <DropShadowEffect x:Key="dropShadow"
+                          BlurRadius="10"
+                          ShadowDepth="3"
+                          Color="Black"/>
+    </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="3*"/>
@@ -13,46 +21,85 @@
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
+        <!-- ⭐⭐ NEIGE ANIMÉE (CANVAS) ⭐⭐ -->
+        <Canvas Name="SnowCanvas"
+                IsHitTestVisible="False"
+                Panel.ZIndex="10">
+        </Canvas>
 
-        <!--******************************* section menu **********************************************************************-->
+        <!-- 🎄 MENU HAUT -->
         <Grid Grid.Row="0" Name="Grd_menu">
+            <Grid.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#D62828" Offset="0"/>
+                    <GradientStop Color="#FF4D4D" Offset="1"/>
+                </LinearGradientBrush>
+            </Grid.Background>
+
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Name="BTN_carte_du_jour" Content="Carte du jour" HorizontalAlignment="Center" Background="#00CCCB" VerticalAlignment="Center" Width="100" Height="100" Click="BTN_Carte_du_jour_Click"/>
-            <Button Grid.Column="1" Name="BTN_Portevue" Content="Porte-vue" HorizontalAlignment="Center" Background="#00CCCB" VerticalAlignment="Center" Width="100" Height="100" Click="BTN_Portevue_Click"/>
-            <Button Grid.Column="2" Name="BTN_Calendrier" Content="Calendrier" HorizontalAlignment="Center" Background="#00CCCB" VerticalAlignment="Center" Width="100" Height="100" Click="BTN_Calendrier_Click"/>
-            <Button Grid.Column="3" Name="BTN_Info" Content="Info" HorizontalAlignment="Center" Background="#00CCCB" VerticalAlignment="Center" Width="100" Height="100" Click="BTN_Info_Click"/>
+            <!-- Style boutons -->
+            <Grid.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="Foreground" Value="White"/>
+                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="FontSize" Value="16"/>
+                    <Setter Property="Margin" Value="10"/>
+                    <Setter Property="Width" Value="140"/>
+                    <Setter Property="Height" Value="120"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="Button">
+                                <Border CornerRadius="25"
+                                        Background="#228B22"
+                                        BorderBrush="White"
+                                        BorderThickness="4"
+                                        Padding="10"
+                                        SnapsToDevicePixels="True"
+                                        Effect="{StaticResource dropShadow}">
+                                    <ContentPresenter HorizontalAlignment="Center"
+                                                      VerticalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </Grid.Resources>
 
+            <Button Grid.Column="0" Name="BTN_carte_du_jour" Content="🎁 Carte du jour" Click="BTN_Carte_du_jour_Click"/>
+            <Button Grid.Column="1" Name="BTN_Portevue" Content="📘 Porte-vue" Click="BTN_Portevue_Click"/>
+            <Button Grid.Column="2" Name="BTN_Calendrier" Content="📅 Calendrier" Click="BTN_Calendrier_Click"/>
+            <Button Grid.Column="3" Name="BTN_Info" Content="❄ Info" Click="BTN_Info_Click"/>
         </Grid>
-        <!--******************************* End of section menu **********************************************************************-->
 
-
-        <!--******************************* section container **********************************************************************-->
+        <!-- 🎅 SECTION CONTAINER -->
         <Grid Grid.Row="1" Name="Grd_container">
-        
+            <Grid.Background>
+                <ImageBrush ImageSource="/Images/snow_background.png" Stretch="UniformToFill"/>
+            </Grid.Background>
         </Grid>
-        <!--******************************* End of section container **********************************************************************-->
 
-
-        <!--******************************* section footer **********************************************************************-->
+        <!-- 🌟 FOOTER -->
         <Grid Grid.Row="2" Name="Grd_Footer">
-
-            <Label Content="Footer" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"/>
+            <Grid.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                    <GradientStop Color="#228B22" Offset="0"/>
+                    <GradientStop Color="#1F7A1F" Offset="1"/>
+                </LinearGradientBrush>
+            </Grid.Background>
+            <Label Content="🎄 Merry Christmas 🎄"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Foreground="White"
+                   FontWeight="Bold"
+                   FontSize="22"/>
         </Grid>
-        <!--******************************* End of section footer **********************************************************************-->
-
-
-
-        <!--<Grid Grid.Row="0" Name="Menu">
-       <Grid.ColumnDefinitions>
-           <ColumnDefinition Width="1*"/>
-           <ColumnDefinition Width="6*"/>
-               <ColumnDefinition Width="1*"/>-->
 
     </Grid>
 </Window>
